# elo-tracker-app

./: .firebaserc  .gitignore  Procfile  app.json  requirements.txt
.firebase/: hosting.ZnJvbnRlbmQvYnVpbGQ.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/: .pdm.toml  compute_ranking.py  main.py  pyproject.toml  ranking_backend.py
data/: data.json
frontend/: .env  package.json
frontend/src/: app.js  index.js
frontend/src/api/: api.js  use-firebase-query.js
frontend/src/components/: multi-select.js
frontend/src/pages/: group-list.js  group.js  ranking.js
frontend/src/utils/: utils.js
